--- a/app/views/factory/in/factory_taxons/_index/_index_tr.html.erb
+++ b/app/views/factory/in/factory_taxons/_index/_index_tr.html.erb
@@ -3,7 +3,7 @@
   <td>
     <div data-show-target="item" style="visibility: hidden">
       <%= link_to({ controller: 'productions', factory_taxon_id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-regular fa-sign-in-alt"></i>
+        <i class="fa-solid fa-sign-in-alt"></i>
       <% end %>
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info"></i>
