--- a/app/views/factory/panel/scenes/_form.html.erb
+++ b/app/views/factory/panel/scenes/_form.html.erb
@@ -1,13 +1,13 @@
 <%= f.text_field :title %>
 <%= f.file_field :logo %>
-<%= f.text_field :book_start_days %>
+<%= f.number_field :book_start_days %>
 <div class="field is-horizontal">
   <%= f.label :book_start_at %>
   <div class="field-body">
     <%= f.time_select :book_start_at, start_hour: 0, end_hour: 23, minute_step: 30, default: { hour: 0, min: 0 }, wrap: { all: 'field is-narrow', select: 'select' }, label: nil %>
   </div>
 </div>
-<%= f.text_field :book_finish_days %>
+<%= f.number_field :book_finish_days %>
 <div class="field is-horizontal">
   <%= f.label :book_finish_at %>
   <div class="field-body">
