--- a/app/views/factory/panel/scenes/_index/_index_tr.html.erb
+++ b/app/views/factory/panel/scenes/_index/_index_tr.html.erb
@@ -2,14 +2,14 @@
   <%= yield %>
   <td>
     <div data-show-target="item" style="visibility: hidden">
-      <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-info') do %>
-        <i class="fa-solid fa-circle-info"></i>
+      <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fa-solid fa-circle-info has-text-success"></i>
       <% end %>
-      <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-info') do %>
-        <i class="fa-solid fa-pencil"></i>
+      <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fa-solid fa-pencil has-text-info"></i>
       <% end %>
-      <%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { turbo_confirm: t('.confirm') }, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-danger') do %>
-        <i class="fa-solid fa-trash"></i>
+      <%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { turbo_confirm: t('.confirm') }, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fa-solid fa-trash has-text-danger"></i>
       <% end %>
     </div>
   </td>
