--- a/app/views/factory/admin/productions/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tr.html.erb
@@ -3,31 +3,31 @@
   <td>
     <div data-show-target="item" style="visibility: hidden">
       <div>
-        <%= link_to({ controller: 'production_plans', production_id: model.id }, aria: { label: t('factory.admin.production_plans.index.title') }, class: 'button is-small is-rounded is-info') do %>
-          <i class="fa-solid fa-list-timeline"></i>
+        <%= link_to({ controller: 'production_plans', production_id: model.id }, aria: { label: t('factory.admin.production_plans.index.title') }, class: 'button is-small is-rounded is-light') do %>
+          <i class="fa-solid fa-list has-text-info"></i>
         <% end %>
-        <%= link_to({ controller: 'production_items', production_id: model.id }, aria: { label: t('factory.admin.production_items.index.title') }, class: 'button is-small is-rounded is-info') do %>
-          <i class="fa-solid fa-list"></i>
+        <%= link_to({ controller: 'production_items', production_id: model.id }, aria: { label: t('factory.admin.production_items.index.title') }, class: 'button is-small is-rounded is-light') do %>
+          <i class="fa-solid fa-list has-text-success"></i>
         <% end %>
-        <%= link_to({ controller: 'trade_items', production_id: model.id }, aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-success') do %>
-          <i class="fa-solid fa-shopping-cart"></i>
+        <%= link_to({ controller: 'trade_items', production_id: model.id }, aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-light') do %>
+          <i class="fa-solid fa-shopping-cart has-text-info"></i>
         <% end %>
-        <%= link_to({ controller: 'part_providers', production_id: model.id }, aria: { label: t('factory.admin.part_providers.index.title') }, class: 'button is-small is-rounded is-danger') do %>
-          <i class="fa-solid fa-hand-holding"></i>
+        <%= link_to({ controller: 'part_providers', production_id: model.id }, aria: { label: t('factory.admin.part_providers.index.title') }, class: 'button is-small is-rounded is-light') do %>
+          <i class="fa-solid fa-hand-holding has-text-danger"></i>
         <% end %>
-        <%= link_to({ controller: 'addresses', production_id: model.id }, aria: { label: t('factory.admin.addresses.index.title') }, class: 'button is-small is-rounded is-warning') do %>
-          <i class="fa-solid fa-map-marker-alt"></i>
+        <%= link_to({ controller: 'addresses', production_id: model.id }, aria: { label: t('factory.admin.addresses.index.title') }, class: 'button is-small is-rounded is-light') do %>
+          <i class="fa-solid fa-map-marker-alt has-text-warning"></i>
         <% end %>
       </div>
       <div class="mt-2">
         <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-          <i class="fa-solid fa-circle-info"></i>
+          <i class="fa-solid fa-circle-info has-text-primary"></i>
         <% end %>
         <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal', turbo_scroll: true }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
-          <i class="fa-solid fa-pencil"></i>
+          <i class="fa-solid fa-pencil has-text-info"></i>
         <% end %>
         <%= button_to({ action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.confirm'), turbo_scroll: true } }) do %>
-          <i class="fa-solid fa-trash"></i>
+          <i class="fa-solid fa-trash has-text-danger"></i>
         <% end %>
       </div>
     </div>
