--- a/app/views/factory/admin/fits/_index/_breadcrumb.html.erb
+++ b/app/views/factory/admin/fits/_index/_breadcrumb.html.erb
@@ -1,6 +1,8 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
-    <li><%= link_to t('factory.admin.products.index.title'), { controller: 'products' } %></li>
+    <li><%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'product_taxons' } %></li>
+    <li><span class="px-3"><%= @product.product_taxon.name %></span></li>
+    <li><%= link_to t('factory.admin.products.index.title'), { controller: 'products', product_taxon_id: @product.product_taxon_id, anchor: "tr_#{params[:product_id]}" } %></li>
     <li><span class="px-3"><%= @product.name %></span></li>
     <li class="is-active"><%= t('.title') %></li>
   </ul>
