--- a/app/views/factory/admin/factory_taxons/_import/_index_tbody.html.erb
+++ b/app/views/factory/admin/factory_taxons/_import/_index_tbody.html.erb
@@ -28,6 +28,6 @@
 </td>
 <td>
   <%# link_to({ controller: 'productions', action: 'part', id: model.id }, aria: { label: t('factory.admin.productions.part.title') }, class: 'button is-small is-rounded is-light') do %>
-    <i class="fa-regular fa-cube"></i>
+    <i class="fa-solid fa-cube"></i>
   <%# end %>
 </td>
