--- a/app/views/factory/in/productions/_index/_index_tbody.html.erb
+++ b/app/views/factory/in/productions/_index/_index_tbody.html.erb
@@ -1,6 +1,6 @@
 <td>
   <div class="is-several">
-    <%= image_tag model.product.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.product.logo.attached? %>
+    <%= image_tag model.product.logo, class: 'image is-24x24' if model.product.logo.attached? %>
     <span><%= model.name %></span>
   </div>
 </td>
@@ -21,6 +21,6 @@
 </td>
 <td>
   <%# link_to({ controller: 'productions', action: 'part', id: model.id }, aria: { label: t('factory.admin.productions.part.title') }, class: 'button is-small is-rounded is-light') do %>
-    <i class="fa-regular fa-cube"></i>
+    <i class="fa-solid fa-cube"></i>
   <%# end %>
 </td>
