--- a/app/views/factory/in/productions/_index/_index_tfoot.html.erb
+++ b/app/views/factory/in/productions/_index/_index_tfoot.html.erb
@@ -1,7 +1,7 @@
 <tfoot>
   <tr>
     <th colspan="3"></th>
-    <th><%= @cart.amount.to_money.format(html_wrap: true).html_safe %></th>
+    <th><%= @cart.amount.to_money.format.html_safe %></th>
     <th class="has-text-centered">
       <%= link_to({ controller: 'orders', action: 'new', current_cart_id: @cart.id, **params.permit!.slice('factory_taxon_id') }, class: 'button is-success') do %>
         <i class="fa-regular fa-credit-card"></i>
