--- a/app/views/factory/admin/provides/_base/_provider_search.html.erb
+++ b/app/views/factory/admin/provides/_base/_provider_search.html.erb
@@ -7,7 +7,7 @@
       <%= f.hidden_field :provider_id, data: { typer_target: 'value' } %>
       <div class="control has-icons-left">
         <%= search_field_tag 'name-like', nil, class: 'input', placeholder: '搜索', data: { typer_target: 'input' } %>
-        <span class="icon is-left"><i class="fa-regular fa-search"></i></span>
+        <span class="icon is-left"><i class="fa-solid fa-search"></i></span>
       </div>
       <div class="panel" id="providers_content"></div>
     </div>
