--- a/app/views/factory/in/productions/index.html+phone.erb
+++ b/app/views/factory/in/productions/index.html+phone.erb
@@ -1,9 +1,15 @@
 <%= render 'produce_on_bar' if params[:produce_on] && params[:scene_id] %>
 
-<div class="weui-flex is-align-items-flex-start">
-  <%= render 'menu' unless params[:produce_plan_id] %>
-  <div class="weui-panel weui-panel_access mt-0 weui-flex__item" data-controller="page" data-page-debug-value="true" data-action="touchmove->page#move:passive">
-    <div class="weui-panel__bd">
+<div class="weui-flex is-align-items-flex-start is-flex-grow-1">
+  <%= render 'menu' unless @produce_plan %>
+  <div
+    data-controller="page"
+    data-page-debug-value="true"
+    data-action="touchmove->page#move:passive"
+    class="weui-panel is-borderless weui-panel_access mt-0 weui-flex__item"
+    style="height: 100%"
+  >
+    <div class="weui-panel__bd is-flex is-flex-direction-column is-flex-grow-1" style="height: 100%">
       <%= render partial: 'production', collection: @productions, as: :model %>
       <%= render 'loading' %>
       <% if @productions.total_pages == @productions.current_page %>
