--- a/app/views/factory/in/carts/_list/_index_tbody.html+phone.erb
+++ b/app/views/factory/in/carts/_list/_index_tbody.html+phone.erb
@@ -2,7 +2,7 @@
   <div class="level-left">
     <div class="level-item is-several">
       <%= image_tag model.avatar.variant(resize_to_limit: [35, 35]), class: 'image is-24x24' if model.avatar.attached? %>
-      <div class="has-text-grey">
+      <div data-controller="open-data" class="has-text-grey">
       <% if request.variant.any?(:work_wechat) %>
         <ww-open-data type="userName" openid="<%= model.name %>"></ww-open-data>
       <% else %>
