--- a/app/views/factory/productions/_show/_breadcrumb.html.erb
+++ b/app/views/factory/productions/_show/_breadcrumb.html.erb
@@ -1,6 +1,6 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
     <li><%= link_to t('factory.products.index.title'), { controller: 'productions' } %></li>
-    <li class="is-active"><%= t('.title') %></li>
+    <li class="is-active"><%= @production.name %></li>
   </ul>
 </div>
