--- a/app/views/factory/productions/_base/_production.html+phone.erb
+++ b/app/views/factory/productions/_base/_production.html+phone.erb
@@ -33,7 +33,7 @@
       <% end %>
     </div>
     <div class="is-flex is-justify-content-flex-end pt-2">
-      <%= render partial: 'cart', locals: { model: model } if current_cart %>
+      <%= render partial: 'cart', locals: { model: model } if @cart %>
     </div>
   </div>
 </div>
