--- a/app/views/factory/produce_plans/index.html+phone.erb
+++ b/app/views/factory/produce_plans/index.html+phone.erb
@@ -1,5 +1,6 @@
+<div class="mb-3"></div>
 <% @produce_plans.each do |produce_on, produce_plans| %>
-<div class="weui-panel">
+<div class="weui-panel is-box is-borderless">
   <div class="weui-panel__hd">
     <span><%= extra_distance_date(produce_on) %></span>
     <span class="has-text-weight-normal has-text-grey is-size-7"><%= produce_on %></span>
