--- a/app/views/factory/in/home/_organs/_organ.html+phone.erb
+++ b/app/views/factory/in/home/_organs/_organ.html+phone.erb
@@ -1,4 +1,4 @@
-<%= link_to({ controller: 'factory/in/home', host: organ.host, auth_token: current_authorized_token.id }, class: 'weui-cell weui-cell_access') do %>
+<%= link_to({ controller: 'factory/in/home', org_id: "org_#{organ.id}" }, class: 'weui-cell weui-cell_access') do %>
   <div class="weui-cell__bd"><%= organ.name %></div>
   <div class="weui-cell__ft"></div>
 <% end %>
