--- a/app/views/factory/in/home/_cart_item.html.erb
+++ b/app/views/factory/in/home/_cart_item.html.erb
@@ -1,4 +1,4 @@
-<%= link_to({ controller: 'trade/our/promote_goods' }, class: 'weui-cell weui-cell_access') do %>
+<%= link_to({ controller: 'trade/in/promote_goods' }, class: 'weui-cell weui-cell_access') do %>
   <div class="weui-cell__bd">
     <i class="fa-solid fa-fw fa-tags has-text-primary"></i>
     <span><%= t('trade.in.promote_goods.index.title') %></span>
