--- a/app/views/factory/in/home/organs.html+phone.erb
+++ b/app/views/factory/in/home/organs.html+phone.erb
@@ -9,3 +9,14 @@
     <%= render partial: 'organ', collection: @organs, as: :organ %>
   </div>
 </div>
+
+<div class="weui-panel">
+  <div class="weui-panel__bd">
+  <% @roles.each do |role| %>
+    <%= link_to({ controller: 'organs', action: 'new', role_id: role.id }, class: 'weui-cell weui-cell_access') do %>
+      <i class="fa-solid fa-plus"></i>
+      <span class="pl-1"><%= role.tip %></span>
+    <% end %>
+  <% end %>
+  </div>
+</div>
