--- a/app/views/factory/admin/product_taxons/_form.html.erb
+++ b/app/views/factory/admin/product_taxons/_form.html.erb
@@ -1,4 +1,4 @@
-<%= f.collection_select :factory_taxon_id, @factory_taxons, :id, :name %>
+<%= f.hidden_field :factory_taxon_id %>
 <%= render partial: 'com/nodes/siblings_select', locals: { f: f } %>
 <%= f.text_field :name %>
 <%= f.file_field :logo %>
