--- a/app/views/factory/in/home/organs.html+phone.erb
+++ b/app/views/factory/in/home/organs.html+phone.erb
@@ -5,6 +5,7 @@
 </div>
 
 <div class="weui-panel">
+  <div class="weui-panel__hd"><%= t('.title') %></div>
   <div class="weui-panel__bd">
     <%= render partial: 'organ', collection: @organs, as: :organ %>
   </div>
