--- a/app/views/factory/admin/trade_items/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/trade_items/_index/_index_thead.html.erb
@@ -3,3 +3,8 @@
 <th><%= Trade::Item.human_attribute_name(:note) %></th>
 <th><%= Trade::Item.human_attribute_name(:extra) %></th>
 <th><%= Trade::Item.human_attribute_name(:status) %></th>
+<th>
+  <p><%= Trade::Item.human_attribute_name(:user_id) %></p>
+  <p><%= Trade::Item.human_attribute_name(:member_id) %></p>
+  <p><%= Trade::Item.human_attribute_name(:member_organ_id) %></p>
+</th>
