--- a/app/views/factory/admin/production_plan_items/_index/_button.html.erb
+++ b/app/views/factory/admin/production_plan_items/_index/_button.html.erb
@@ -4,7 +4,7 @@
     <%= f.hidden_field :came_at, value: Time.current.to_s(:local) %>
     <%= f.submit '新增', class: 'button is-info' %>
   <% end %>
-  <%= form_with theme: nil, scope: '', model: @production_item, url: { action: 'batch' }, class: 'ml-2' do |f| %>
+  <%= form_with theme: nil, model: @production_item, url: { action: 'batch' }, class: 'ml-2' do |f| %>
     <%= f.submit '批量新增', class: 'button is-info' %>
   <% end %>
 </div>
