--- a/app/views/factory/admin/production_plans/_index/_filter_form.html.erb
+++ b/app/views/factory/admin/production_plans/_index/_filter_form.html.erb
@@ -1,9 +1,10 @@
 <%= form_with theme: 'search' do |f| %>
   <div class="field-body">
-    <%= f.date_field 'start_at-gte' %>
+    <%= f.date_field 'produce_on-gte' %>
+    <%= f.date_field 'produce_on-lte' %>
     <div class="field is-narrow">
       <%= f.submit %>
-      <%= link_to t('.clear'), filter_params(except: ['start_at-gte']), class: 'button is-light' %>
+      <%= link_to t('.clear'), filter_params(except: ['start_at-gte', 'produce_on-gte', 'produce_on-lte']), class: 'button is-light' %>
     </div>
   </div>
 <% end %>
