--- a/app/views/factory/in/provides/_index/_provider_tbody.html.erb
+++ b/app/views/factory/in/provides/_index/_provider_tbody.html.erb
@@ -6,7 +6,7 @@
 </td>
 <td></td>
 <td>
-  <%= button_to({ action: 'add', provider_id: model.id }, class: 'button is-small is-rounded is-light') do %>
+  <%= button_to({ action: 'create' }, params: { 'provide[provider_id]': model.id }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-solid fa-plus has-text-success"></i>
     <span class="pl-1"><%= t('factory.in.provides.add.title') %></span>
   <% end %>
