--- a/app/views/factory/admin/product_taxons/_index/_button.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_button.html.erb
@@ -1,6 +1,10 @@
 <div class="buttons are-small mb-0">
   <%= link_to({ action: 'all', **request.query_parameters.except(:id) }, class: 'button is-link') do %>
     <i class="fa-solid fa-plus"></i>
+    <span class="pl-1"><%= t('.all.title') %></span>
+  <% end %>
+  <%= link_to({ action: 'new', **request.query_parameters.except(:id) }, data: { turbo_frame: 'modal' }, class: 'button is-info') do %>
+    <i class="fa-solid fa-plus"></i>
     <span class="pl-1"><%= t('.new.title') %></span>
   <% end %>
 </div>
