--- a/app/views/factory/productions/show.html.erb
+++ b/app/views/factory/productions/show.html.erb
@@ -5,8 +5,7 @@
   <div class="box">
     <h1 class="title"><%= @production.product.name %></h1>
     <div class="has-text-danger has-text-bold">
-      <span><%= @production.price.to_money.symbol %></span>
-      <span id="total_price"><%= @production.price.to_money.to_s %></span>
+      <span><%= @production.price.to_money.format.html_safe %></span>
     </div>
     <div class="is-flex mt-1">
       <%= render partial: 'cart', locals: { model: @production, item_con: 'trade/my/items' } if @cart %>
