--- a/app/views/factory/admin/purchase_items/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/purchase_items/_index/_index_tbody.html.erb
@@ -1,4 +1,4 @@
-<td><%= model.number %></td>
+<td><%= model.number.to_human %></td>
 <td><%= model.amount.to_money.format.html_safe %></td>
 <td><%= model.note %></td>
 <td><%= model.purchase_status_i18n %></td>
