--- a/app/views/factory/admin/stock_logs/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/stock_logs/_index/_index_tbody.html.erb
@@ -1,7 +1,15 @@
 <td><%= model.title %></td>
 <td><%= model.tag_str %></td>
-<td><%= model.amount %></td>
-<td><%= model.stock %></td>
+<td>
+<% if model.amount > 0 %>
+  <span class="has-text-success"><%= model.amount.to_human %></span>
+<% elsif model.amount < 0 %>
+  <span class="has-text-danger"><%= model.amount.to_human %></span>
+<% else %>
+  <span class="has-text-grey"><%= model.amount.to_human %></span>
+<% end %>
+</td>
+<td><%= model.stock.to_human %></td>
 <td>
   <p><%= model.source_type %></p>
   <p><%= model.source_id %></p>
