--- a/app/views/factory/admin/stock_logs/_show_table.html.erb
+++ b/app/views/factory/admin/stock_logs/_show_table.html.erb
@@ -1,19 +1,16 @@
 <tr>
-  <td class="has-text-right"><%= Trade::WalletLog.human_attribute_name(:title) %></td>
-  <td><%= @wallet_log.title %></td>
+  <td class="has-text-right"><%= Factory::StockLog.human_attribute_name(:title) %></td>
+  <td><%= @stock_log.title %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Trade::WalletLog.human_attribute_name(:amount) %></td>
-  <td>
-    <span><%= @wallet_log.amount.to_fs(:rounded, precision: model.wallet.wallet_template.digit) %></span>
-    <span><%= @wallet_log.wallet.wallet_template.unit %></span>
-  </td>
+  <td class="has-text-right"><%= Factory::StockLog.human_attribute_name(:amount) %></td>
+  <td><%= @stock_log.amount.to_human %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Trade::WalletLog.human_attribute_name(:source_type) %></td>
-  <td><%= @wallet_log.source_type %></td>
+  <td class="has-text-right"><%= Factory::StockLog.human_attribute_name(:source_type) %></td>
+  <td><%= @stock_log.source_type %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Trade::WalletLog.human_attribute_name(:source_id) %></td>
-  <td><%= @wallet_log.source_id %></td>
+  <td class="has-text-right"><%= Factory::StockLog.human_attribute_name(:source_id) %></td>
+  <td><%= @stock_log.source_id %></td>
 </tr>
