--- a/app/views/factory/in/productions/_index/_cart.html.erb
+++ b/app/views/factory/in/productions/_index/_cart.html.erb
@@ -2,13 +2,9 @@
 
 <% if item %>
 <div data-controller="modify" data-modify-submit-value="true" class="is-flex is-justify-content-center">
-  <%= form_with theme: nil, scope: 'item', url: { controller: 'trade/in/items', action: 'update', id: item.id }, method: :patch, state: 'redirect_return', data: { turbo_scroll: true }, class: 'ml-1 button_to' do |f| %>
-    <%= f.hidden_field :current_cart_id, value: @cart.id %>
-    <%= f.hidden_field :number, value: item.number - 1 %>
-    <%= button_tag do %>
-      <i class="fa-solid fa-xl fa-circle-minus has-text-grey"></i>
-    <% end %>
-  <% end if item.number > 1 %>
+  <button data-action="modify#minus" class="button_to">
+    <i class="fa-solid fa-xl fa-circle-minus has-text-grey"></i>
+  </button>
   <%= button_to({ controller: 'trade/in/items', action: 'destroy', id: item.id }, method: :delete, params: { current_cart_id: @cart.id }, state: 'redirect_return', data: { turbo_scroll: true }, class: 'mr-1') do %>
     <i class="fa-solid fa-xl fa-circle-minus has-text-grey"></i>
   <% end if item.number <= 1 %>
